src/test/ui/error-codes/E0616.stderr
error[E0616]: field `x` of struct `a::Foo` is private
  --> $DIR/E0616.rs:23:5
   |
LL |     f.x; //~ ERROR E0616
   |     ^^^

error: aborting due to previous error

